--- a/xref-test/com/jcabi/ssh/SSHDTest.html
+++ b/xref-test/com/jcabi/ssh/SSHDTest.html
@@ -68,18 +68,17 @@
 <a class="jxr_linenumber" name="L60" href="#L60">60</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> executeCommandOnServer() <strong class="jxr_keyword">throws</strong> Exception {
 <a class="jxr_linenumber" name="L61" href="#L61">61</a>          Assume.assumeFalse(SystemUtils.IS_OS_WINDOWS);
 <a class="jxr_linenumber" name="L62" href="#L62">62</a>          <strong class="jxr_keyword">final</strong> SSHD sshd = <strong class="jxr_keyword">new</strong> SSHD(<strong class="jxr_keyword">this</strong>.temp.newFolder());
-<a class="jxr_linenumber" name="L63" href="#L63">63</a>          sshd.start();
-<a class="jxr_linenumber" name="L64" href="#L64">64</a>          <strong class="jxr_keyword">try</strong> {
-<a class="jxr_linenumber" name="L65" href="#L65">65</a>              <strong class="jxr_keyword">final</strong> Shell shell = <strong class="jxr_keyword">new</strong> Shell.Safe(
-<a class="jxr_linenumber" name="L66" href="#L66">66</a>                  <strong class="jxr_keyword">new</strong> SSH(sshd.host(), sshd.port(), sshd.login(), sshd.key())
-<a class="jxr_linenumber" name="L67" href="#L67">67</a>              );
-<a class="jxr_linenumber" name="L68" href="#L68">68</a>              <strong class="jxr_keyword">new</strong> Shell.Empty(shell).exec(<span class="jxr_string">"echo one"</span>);
-<a class="jxr_linenumber" name="L69" href="#L69">69</a>          } <strong class="jxr_keyword">finally</strong> {
-<a class="jxr_linenumber" name="L70" href="#L70">70</a>              sshd.stop();
-<a class="jxr_linenumber" name="L71" href="#L71">71</a>          }
-<a class="jxr_linenumber" name="L72" href="#L72">72</a>      }
-<a class="jxr_linenumber" name="L73" href="#L73">73</a>  
-<a class="jxr_linenumber" name="L74" href="#L74">74</a>  }
+<a class="jxr_linenumber" name="L63" href="#L63">63</a>          <strong class="jxr_keyword">try</strong> {
+<a class="jxr_linenumber" name="L64" href="#L64">64</a>              <strong class="jxr_keyword">final</strong> Shell shell = <strong class="jxr_keyword">new</strong> Shell.Safe(
+<a class="jxr_linenumber" name="L65" href="#L65">65</a>                  <strong class="jxr_keyword">new</strong> SSH(sshd.host(), sshd.port(), sshd.login(), sshd.key())
+<a class="jxr_linenumber" name="L66" href="#L66">66</a>              );
+<a class="jxr_linenumber" name="L67" href="#L67">67</a>              <strong class="jxr_keyword">new</strong> Shell.Empty(shell).exec(<span class="jxr_string">"echo one"</span>);
+<a class="jxr_linenumber" name="L68" href="#L68">68</a>          } <strong class="jxr_keyword">finally</strong> {
+<a class="jxr_linenumber" name="L69" href="#L69">69</a>              sshd.close();
+<a class="jxr_linenumber" name="L70" href="#L70">70</a>          }
+<a class="jxr_linenumber" name="L71" href="#L71">71</a>      }
+<a class="jxr_linenumber" name="L72" href="#L72">72</a>  
+<a class="jxr_linenumber" name="L73" href="#L73">73</a>  }
 </pre>
 <hr/>
 <div id="footer">Copyright &#169; 2012&#x2013;2014 <a href="http://www.jcabi.com">jcabi.com</a>. All rights reserved.</div>
