--- a/xref/allclasses-frame.html
+++ b/xref/allclasses-frame.html
@@ -12,7 +12,13 @@
 
 		<ul>
 						<li>
+				<a href="com/jcabi/ssh/EasyRepo.html" target="classFrame">EasyRepo</a>
+			</li>
+						<li>
 				<a href="com/jcabi/ssh/Shell.html" target="classFrame">Empty</a>
+			</li>
+						<li>
+				<a href="com/jcabi/ssh/JschLogger.html" target="classFrame">JschLogger</a>
 			</li>
 						<li>
 				<a href="com/jcabi/ssh/Shell.html" target="classFrame">Plain</a>
