--- a/xref/com/jcabi/ssh/Shell.html
+++ b/xref/com/jcabi/ssh/Shell.html
@@ -111,7 +111,7 @@
 <a class="jxr_linenumber" name="L103" href="#L103">103</a>             <strong class="jxr_keyword">final</strong> <strong class="jxr_keyword">int</strong> exit = <strong class="jxr_keyword">this</strong>.origin.exec(command, stdin, stdout, stderr);
 <a class="jxr_linenumber" name="L104" href="#L104">104</a>             <strong class="jxr_keyword">if</strong> (exit != 0) {
 <a class="jxr_linenumber" name="L105" href="#L105">105</a>                 <strong class="jxr_keyword">throw</strong> <strong class="jxr_keyword">new</strong> IllegalArgumentException(
-<a class="jxr_linenumber" name="L106" href="#L106">106</a>                     String.format(<span class="jxr_string">"exit code #%d: %s"</span>, exit, command)
+<a class="jxr_linenumber" name="L106" href="#L106">106</a>                     String.format(<span class="jxr_string">"non-zero exit code #%d: %s"</span>, exit, command)
 <a class="jxr_linenumber" name="L107" href="#L107">107</a>                 );
 <a class="jxr_linenumber" name="L108" href="#L108">108</a>             }
 <a class="jxr_linenumber" name="L109" href="#L109">109</a>             <strong class="jxr_keyword">return</strong> exit;
