--- a/cobertura/frame-sourcefiles-com.jcabi.ssh.html
+++ b/cobertura/frame-sourcefiles-com.jcabi.ssh.html
@@ -15,13 +15,19 @@ com.jcabi.ssh
 <table width="100%">
 <tbody>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSH.html">SSH</a> <i>(68%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.EasyRepo.html">EasyRepo</a> <i>(30%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.JschLogger.html">JschLogger</a> <i>(18%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSH.html">SSH</a> <i>(67%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSHD.html">SSHD</a> <i>(88%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.Shell.html">Shell</a> <i>(27%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.Shell.html">Shell</a> <i>(55%)</i></td>
 </tr>
 </tbody>
 </table>
