--- a/xref/com/jcabi/ssh/package-summary.html
+++ b/xref/com/jcabi/ssh/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-ssh 1.3 Reference Package com.jcabi.ssh</title>
+		<title>jcabi-ssh 1.4 Reference Package com.jcabi.ssh</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -37,7 +37,17 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="EasyRepo.html" target="classFrame">EasyRepo</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Shell.html" target="classFrame">Empty</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="JschLogger.html" target="classFrame">JschLogger</a>
               		</td>
             	</tr>
 				            	<tr>
