--- a/cobertura/frame-sourcefiles-com.jcabi.ssh.html
+++ b/cobertura/frame-sourcefiles-com.jcabi.ssh.html
@@ -18,13 +18,19 @@ com.jcabi.ssh
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.EasyRepo.html">EasyRepo</a> <i>(30%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.JschLogger.html">JschLogger</a> <i>(18%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.Execution.html">Execution</a> <i>(77%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSH.html">SSH</a> <i>(67%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.JschLogger.html">JschLogger</a> <i>(63%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSHD.html">SSHD</a> <i>(88%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSH.html">SSH</a> <i>(65%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSHByPassword.html">SSHByPassword</a> <i>(82%)</i></td>
+</tr>
+<tr>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSHD.html">SSHD</a> <i>(89%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.Shell.html">Shell</a> <i>(55%)</i></td>
