--- a/xref/allclasses-frame.html
+++ b/xref/allclasses-frame.html
@@ -12,10 +12,16 @@
 
 		<ul>
 						<li>
+				<a href="com/jcabi/ssh/Execution.html" target="classFrame">Default</a>
+			</li>
+						<li>
 				<a href="com/jcabi/ssh/EasyRepo.html" target="classFrame">EasyRepo</a>
 			</li>
 						<li>
 				<a href="com/jcabi/ssh/Shell.html" target="classFrame">Empty</a>
+			</li>
+						<li>
+				<a href="com/jcabi/ssh/Execution.html" target="classFrame">Execution</a>
 			</li>
 						<li>
 				<a href="com/jcabi/ssh/JschLogger.html" target="classFrame">JschLogger</a>
@@ -25,6 +31,9 @@
 			</li>
 						<li>
 				<a href="com/jcabi/ssh/SSH.html" target="classFrame">SSH</a>
+			</li>
+						<li>
+				<a href="com/jcabi/ssh/SSHByPassword.html" target="classFrame">SSHByPassword</a>
 			</li>
 						<li>
 				<a href="com/jcabi/ssh/SSHD.html" target="classFrame">SSHD</a>
