--- a/xref-test/allclasses-frame.html
+++ b/xref-test/allclasses-frame.html
@@ -12,10 +12,16 @@
 
 		<ul>
 						<li>
-				<a href="com/jcabi/ssh/SSHTest.html" target="classFrame">EchoCommand</a>
+				<a href="com/jcabi/ssh/SSHByPasswordTest.html" target="classFrame">EchoCommand</a>
 			</li>
 						<li>
-				<a href="com/jcabi/ssh/SSHTest.html" target="classFrame">EchoCommandCreator</a>
+				<a href="com/jcabi/ssh/SSHByPasswordTest.html" target="classFrame">EchoCommandCreator</a>
+			</li>
+						<li>
+				<a href="com/jcabi/ssh/ExecutionTest.html" target="classFrame">ExecutionTest</a>
+			</li>
+						<li>
+				<a href="com/jcabi/ssh/SSHByPasswordTest.html" target="classFrame">SSHByPasswordTest</a>
 			</li>
 						<li>
 				<a href="com/jcabi/ssh/SSHDTest.html" target="classFrame">SSHDTest</a>
