--- a/xref/com/jcabi/ssh/package-frame.html
+++ b/xref/com/jcabi/ssh/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-ssh 1.4 Reference Package com.jcabi.ssh</title>
+		<title>jcabi-ssh 1.5 Reference Package com.jcabi.ssh</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -16,10 +16,16 @@
 
       	<ul>
       		          	<li>
+            	<a href="Execution.html" target="classFrame">Default</a>
+          	</li>
+          	          	<li>
             	<a href="EasyRepo.html" target="classFrame">EasyRepo</a>
           	</li>
           	          	<li>
             	<a href="Shell.html" target="classFrame">Empty</a>
+          	</li>
+          	          	<li>
+            	<a href="Execution.html" target="classFrame">Execution</a>
           	</li>
           	          	<li>
             	<a href="JschLogger.html" target="classFrame">JschLogger</a>
@@ -29,6 +35,9 @@
           	</li>
           	          	<li>
             	<a href="SSH.html" target="classFrame">SSH</a>
+          	</li>
+          	          	<li>
+            	<a href="SSHByPassword.html" target="classFrame">SSHByPassword</a>
           	</li>
           	          	<li>
             	<a href="SSHD.html" target="classFrame">SSHD</a>
