--- a/xref/com/jcabi/ssh/package-summary.html
+++ b/xref/com/jcabi/ssh/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-ssh 1.4 Reference Package com.jcabi.ssh</title>
+		<title>jcabi-ssh 1.5 Reference Package com.jcabi.ssh</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -37,12 +37,22 @@
         	<tbody>
         		            	<tr>
               		<td>
+                		<a href="Execution.html" target="classFrame">Default</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="EasyRepo.html" target="classFrame">EasyRepo</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
                 		<a href="Shell.html" target="classFrame">Empty</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="Execution.html" target="classFrame">Execution</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -58,6 +68,11 @@
 				            	<tr>
               		<td>
                 		<a href="SSH.html" target="classFrame">SSH</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="SSHByPassword.html" target="classFrame">SSHByPassword</a>
               		</td>
             	</tr>
 				            	<tr>
@@ -103,7 +118,7 @@
       	</div>
 				<hr />
 		<div id="footer">
-			Copyright &#169; 2012&#x2013;2014 <a href="http://www.jcabi.com">jcabi.com</a>. All rights reserved.
+			Copyright &#169; 2012&#x2013;2015 <a href="http://www.jcabi.com">jcabi.com</a>. All rights reserved.
 		</div>
 	</body>
 </html>
