--- a/xref-test/com/jcabi/ssh/package-frame.html
+++ b/xref-test/com/jcabi/ssh/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-ssh 1.5 Reference Package com.jcabi.ssh</title>
+		<title>jcabi-ssh 1.5.1 Reference Package com.jcabi.ssh</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -16,13 +16,16 @@
 
       	<ul>
       		          	<li>
-            	<a href="SSHByPasswordTest.html" target="classFrame">EchoCommand</a>
+            	<a href="SSHTest.html" target="classFrame">EchoCommand</a>
           	</li>
           	          	<li>
-            	<a href="SSHByPasswordTest.html" target="classFrame">EchoCommandCreator</a>
+            	<a href="SSHTest.html" target="classFrame">EchoCommandCreator</a>
           	</li>
           	          	<li>
             	<a href="ExecutionTest.html" target="classFrame">ExecutionTest</a>
+          	</li>
+          	          	<li>
+            	<a href="MockSshServerBuilder.html" target="classFrame">MockSshServerBuilder</a>
           	</li>
           	          	<li>
             	<a href="SSHByPasswordTest.html" target="classFrame">SSHByPasswordTest</a>
