--- a/xref-test/com/jcabi/ssh/package-summary.html
+++ b/xref-test/com/jcabi/ssh/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-ssh 1.5 Reference Package com.jcabi.ssh</title>
+		<title>jcabi-ssh 1.5.1 Reference Package com.jcabi.ssh</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -37,17 +37,22 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="SSHByPasswordTest.html" target="classFrame">EchoCommand</a>
+                		<a href="SSHTest.html" target="classFrame">EchoCommand</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="SSHByPasswordTest.html" target="classFrame">EchoCommandCreator</a>
+                		<a href="SSHTest.html" target="classFrame">EchoCommandCreator</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
                 		<a href="ExecutionTest.html" target="classFrame">ExecutionTest</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
+                		<a href="MockSshServerBuilder.html" target="classFrame">MockSshServerBuilder</a>
               		</td>
             	</tr>
 				            	<tr>
