--- a/xref/allclasses-frame.html
+++ b/xref/allclasses-frame.html
@@ -12,6 +12,9 @@
 
 		<ul>
 						<li>
+				<a href="com/jcabi/ssh/AbstractSSHShell.html" target="classFrame">AbstractSSHShell</a>
+			</li>
+						<li>
 				<a href="com/jcabi/ssh/Execution.html" target="classFrame">Default</a>
 			</li>
 						<li>
