--- a/cobertura/frame-sourcefiles.html
+++ b/cobertura/frame-sourcefiles.html
@@ -15,6 +15,9 @@ All Packages
 <table width="100%">
 <tbody>
 <tr>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.AbstractSSHShell.html">AbstractSSHShell</a> <i>(84%)</i></td>
+</tr>
+<tr>
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.EasyRepo.html">EasyRepo</a> <i>(30%)</i></td>
 </tr>
 <tr>
@@ -24,13 +27,13 @@ All Packages
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.JschLogger.html">JschLogger</a> <i>(63%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSH.html">SSH</a> <i>(65%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSH.html">SSH</a> <i>(62%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSHByPassword.html">SSHByPassword</a> <i>(82%)</i></td>
 </tr>
 <tr>
-<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSHD.html">SSHD</a> <i>(89%)</i></td>
+<td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.SSHD.html">SSHD</a> <i>(83%)</i></td>
 </tr>
 <tr>
 <td nowrap="nowrap"><a target="summary" href="com.jcabi.ssh.Shell.html">Shell</a> <i>(55%)</i></td>
