--- a/xref/com/jcabi/ssh/package-frame.html
+++ b/xref/com/jcabi/ssh/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-ssh 1.5.1 Reference Package com.jcabi.ssh</title>
+		<title>jcabi-ssh 1.5.2 Reference Package com.jcabi.ssh</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -16,6 +16,9 @@
 
       	<ul>
       		          	<li>
+            	<a href="AbstractSSHShell.html" target="classFrame">AbstractSSHShell</a>
+          	</li>
+          	          	<li>
             	<a href="Execution.html" target="classFrame">Default</a>
           	</li>
           	          	<li>
