--- a/xref/com/jcabi/ssh/package-summary.html
+++ b/xref/com/jcabi/ssh/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-ssh 1.5.1 Reference Package com.jcabi.ssh</title>
+		<title>jcabi-ssh 1.5.2 Reference Package com.jcabi.ssh</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -36,6 +36,11 @@
         	</thead>
         	<tbody>
         		            	<tr>
+              		<td>
+                		<a href="AbstractSSHShell.html" target="classFrame">AbstractSSHShell</a>
+              		</td>
+            	</tr>
+				            	<tr>
               		<td>
                 		<a href="Execution.html" target="classFrame">Default</a>
               		</td>
@@ -118,7 +123,7 @@
       	</div>
 				<hr />
 		<div id="footer">
-			Copyright &#169; 2012&#x2013;2015 <a href="http://www.jcabi.com">jcabi.com</a>. All rights reserved.
+			Copyright &#169; 2012&#x2013;2016 <a href="http://www.jcabi.com">jcabi.com</a>. All rights reserved.
 		</div>
 	</body>
 </html>
