--- a/xref/com/jcabi/ssh/AbstractSshShell.html
+++ b/xref/com/jcabi/ssh/AbstractSshShell.html
@@ -93,7 +93,7 @@
 <a class="jxr_linenumber" name="L85" href="#L85">85</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> exec(<strong class="jxr_keyword">final</strong> String command, <strong class="jxr_keyword">final</strong> InputStream stdin,
 <a class="jxr_linenumber" name="L86" href="#L86">86</a>          <strong class="jxr_keyword">final</strong> OutputStream stdout, <strong class="jxr_keyword">final</strong> OutputStream stderr)
 <a class="jxr_linenumber" name="L87" href="#L87">87</a>          <strong class="jxr_keyword">throws</strong> IOException {
-<a class="jxr_linenumber" name="L88" href="#L88">88</a>          <strong class="jxr_keyword">return</strong> <strong class="jxr_keyword">new</strong> Execution.Default(
+<a class="jxr_linenumber" name="L88" href="#L88">88</a>          <strong class="jxr_keyword">return</strong> <strong class="jxr_keyword">new</strong> <a href="../../../com/jcabi/ssh/Execution.html">Execution</a>(
 <a class="jxr_linenumber" name="L89" href="#L89">89</a>              command,
 <a class="jxr_linenumber" name="L90" href="#L90">90</a>              stdin,
 <a class="jxr_linenumber" name="L91" href="#L91">91</a>              stdout,
