--- a/xref-test/allclasses-frame.html
+++ b/xref-test/allclasses-frame.html
@@ -27,6 +27,9 @@
 				<a href="com/jcabi/ssh/SshByPasswordTest.html" target="classFrame">SshByPasswordTest</a>
 			</li>
 						<li>
+				<a href="com/jcabi/ssh/SshITCase.html" target="classFrame">SshITCase</a>
+			</li>
+						<li>
 				<a href="com/jcabi/ssh/SshTest.html" target="classFrame">SshTest</a>
 			</li>
 						<li>
