--- a/xref-test/com/jcabi/ssh/ExecutionTest.html
+++ b/xref-test/com/jcabi/ssh/ExecutionTest.html
@@ -68,7 +68,7 @@
 <a class="jxr_linenumber" name="L60" href="#L60">60</a>              ExecutionTest.EXIT_CODE
 <a class="jxr_linenumber" name="L61" href="#L61">61</a>          );
 <a class="jxr_linenumber" name="L62" href="#L62">62</a>          MatcherAssert.assertThat(
-<a class="jxr_linenumber" name="L63" href="#L63">63</a>              <strong class="jxr_keyword">new</strong> Execution.Default(
+<a class="jxr_linenumber" name="L63" href="#L63">63</a>              <strong class="jxr_keyword">new</strong> Execution(
 <a class="jxr_linenumber" name="L64" href="#L64">64</a>                  <span class="jxr_string">"hello"</span>,
 <a class="jxr_linenumber" name="L65" href="#L65">65</a>                  <strong class="jxr_keyword">new</strong> DeadInputStream(),
 <a class="jxr_linenumber" name="L66" href="#L66">66</a>                  <strong class="jxr_keyword">new</strong> ByteArrayOutputStream(),
