--- a/xref-test/com/jcabi/ssh/package-frame.html
+++ b/xref-test/com/jcabi/ssh/package-frame.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-ssh 1.7.0 Reference Package com.jcabi.ssh</title>
+		<title>jcabi-ssh 1.8.1 Reference Package com.jcabi.ssh</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -29,6 +29,9 @@
           	</li>
           	          	<li>
             	<a href="SshByPasswordTest.html" target="classFrame">SshByPasswordTest</a>
+          	</li>
+          	          	<li>
+            	<a href="SshITCase.html" target="classFrame">SshITCase</a>
           	</li>
           	          	<li>
             	<a href="SshTest.html" target="classFrame">SshTest</a>
