--- a/xref-test/allclasses-frame.html
+++ b/xref-test/allclasses-frame.html
@@ -24,16 +24,19 @@
 				<a href="com/jcabi/ssh/MockSshServerBuilder.html" target="classFrame">MockSshServerBuilder</a>
 			</li>
 						<li>
+				<a href="com/jcabi/ssh/SshByPasswordITCase.html" target="classFrame">SshByPasswordITCase</a>
+			</li>
+						<li>
 				<a href="com/jcabi/ssh/SshByPasswordTest.html" target="classFrame">SshByPasswordTest</a>
 			</li>
 						<li>
 				<a href="com/jcabi/ssh/SshITCase.html" target="classFrame">SshITCase</a>
 			</li>
 						<li>
-				<a href="com/jcabi/ssh/SshTest.html" target="classFrame">SshTest</a>
+				<a href="com/jcabi/ssh/SshITCaseTemplate.html" target="classFrame">SshITCaseTemplate</a>
 			</li>
 						<li>
-				<a href="com/jcabi/ssh/SshdTest.html" target="classFrame">SshdTest</a>
+				<a href="com/jcabi/ssh/SshTest.html" target="classFrame">SshTest</a>
 			</li>
 			      </ul>
 
