--- a/xref-test/com/jcabi/ssh/package-summary.html
+++ b/xref-test/com/jcabi/ssh/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>jcabi-ssh 1.8.1 Reference Package com.jcabi.ssh</title>
+		<title>jcabi-ssh 1.9.0 Reference Package com.jcabi.ssh</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -57,6 +57,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="SshByPasswordITCase.html" target="classFrame">SshByPasswordITCase</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="SshByPasswordTest.html" target="classFrame">SshByPasswordTest</a>
               		</td>
             	</tr>
@@ -67,12 +72,12 @@
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="SshTest.html" target="classFrame">SshTest</a>
+                		<a href="SshITCaseTemplate.html" target="classFrame">SshITCaseTemplate</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="SshdTest.html" target="classFrame">SshdTest</a>
+                		<a href="SshTest.html" target="classFrame">SshTest</a>
               		</td>
             	</tr>
 				        	</tbody>
