--- a/xref/com/jcabi/ssh/SshByPassword.html
+++ b/xref/com/jcabi/ssh/SshByPassword.html
@@ -90,23 +90,23 @@
 <a class="jxr_linenumber" name="L82" href="#L82">82</a>      )
 <a class="jxr_linenumber" name="L83" href="#L83">83</a>      <strong class="jxr_keyword">protected</strong> Session session() <strong class="jxr_keyword">throws</strong> IOException {
 <a class="jxr_linenumber" name="L84" href="#L84">84</a>          <strong class="jxr_keyword">try</strong> {
-<a class="jxr_linenumber" name="L85" href="#L85">85</a>              JSch.setConfig(<span class="jxr_string">"StrictHostKeyChecking"</span>, <span class="jxr_string">"no"</span>);
-<a class="jxr_linenumber" name="L86" href="#L86">86</a>              JSch.setLogger(<strong class="jxr_keyword">new</strong> <a href="../../../com/jcabi/ssh/JschLogger.html">JschLogger</a>());
-<a class="jxr_linenumber" name="L87" href="#L87">87</a>              <strong class="jxr_keyword">final</strong> JSch jsch = <strong class="jxr_keyword">new</strong> JSch();
-<a class="jxr_linenumber" name="L88" href="#L88">88</a>              Logger.debug(
-<a class="jxr_linenumber" name="L89" href="#L89">89</a>                  <strong class="jxr_keyword">this</strong>,
-<a class="jxr_linenumber" name="L90" href="#L90">90</a>                  <span class="jxr_string">"Opening SSH session to %s@%s:%s (auth with password)..."</span>,
-<a class="jxr_linenumber" name="L91" href="#L91">91</a>                  <strong class="jxr_keyword">this</strong>.getLogin(), <strong class="jxr_keyword">this</strong>.getAddr(), <strong class="jxr_keyword">this</strong>.getPort()
-<a class="jxr_linenumber" name="L92" href="#L92">92</a>              );
-<a class="jxr_linenumber" name="L93" href="#L93">93</a>              <strong class="jxr_keyword">final</strong> Session session = jsch.getSession(
-<a class="jxr_linenumber" name="L94" href="#L94">94</a>                  <strong class="jxr_keyword">this</strong>.getLogin(), <strong class="jxr_keyword">this</strong>.getAddr(), <strong class="jxr_keyword">this</strong>.getPort()
-<a class="jxr_linenumber" name="L95" href="#L95">95</a>              );
+<a class="jxr_linenumber" name="L85" href="#L85">85</a>              JSch.setLogger(<strong class="jxr_keyword">new</strong> <a href="../../../com/jcabi/ssh/JschLogger.html">JschLogger</a>());
+<a class="jxr_linenumber" name="L86" href="#L86">86</a>              <strong class="jxr_keyword">final</strong> JSch jsch = <strong class="jxr_keyword">new</strong> JSch();
+<a class="jxr_linenumber" name="L87" href="#L87">87</a>              Logger.debug(
+<a class="jxr_linenumber" name="L88" href="#L88">88</a>                  <strong class="jxr_keyword">this</strong>,
+<a class="jxr_linenumber" name="L89" href="#L89">89</a>                  <span class="jxr_string">"Opening SSH session to %s@%s:%s (auth with password)..."</span>,
+<a class="jxr_linenumber" name="L90" href="#L90">90</a>                  <strong class="jxr_keyword">this</strong>.getLogin(), <strong class="jxr_keyword">this</strong>.getAddr(), <strong class="jxr_keyword">this</strong>.getPort()
+<a class="jxr_linenumber" name="L91" href="#L91">91</a>              );
+<a class="jxr_linenumber" name="L92" href="#L92">92</a>              <strong class="jxr_keyword">final</strong> Session session = jsch.getSession(
+<a class="jxr_linenumber" name="L93" href="#L93">93</a>                  <strong class="jxr_keyword">this</strong>.getLogin(), <strong class="jxr_keyword">this</strong>.getAddr(), <strong class="jxr_keyword">this</strong>.getPort()
+<a class="jxr_linenumber" name="L94" href="#L94">94</a>              );
+<a class="jxr_linenumber" name="L95" href="#L95">95</a>              session.setConfig(<span class="jxr_string">"StrictHostKeyChecking"</span>, <span class="jxr_string">"no"</span>);
 <a class="jxr_linenumber" name="L96" href="#L96">96</a>              session.setPassword(<strong class="jxr_keyword">this</strong>.password);
 <a class="jxr_linenumber" name="L97" href="#L97">97</a>              session.setServerAliveInterval(
 <a class="jxr_linenumber" name="L98" href="#L98">98</a>                  (<strong class="jxr_keyword">int</strong>) TimeUnit.SECONDS.toMillis(Tv.TEN)
 <a class="jxr_linenumber" name="L99" href="#L99">99</a>              );
 <a class="jxr_linenumber" name="L100" href="#L100">100</a>             session.setServerAliveCountMax(Tv.MILLION);
-<a class="jxr_linenumber" name="L101" href="#L101">101</a>             session.connect();
+<a class="jxr_linenumber" name="L101" href="#L101">101</a>             session.connect((<strong class="jxr_keyword">int</strong>) TimeUnit.SECONDS.toMillis(10L));
 <a class="jxr_linenumber" name="L102" href="#L102">102</a>             <strong class="jxr_keyword">return</strong> session;
 <a class="jxr_linenumber" name="L103" href="#L103">103</a>         } <strong class="jxr_keyword">catch</strong> (<strong class="jxr_keyword">final</strong> JSchException ex) {
 <a class="jxr_linenumber" name="L104" href="#L104">104</a>             <strong class="jxr_keyword">throw</strong> <strong class="jxr_keyword">new</strong> IOException(ex);
